css/style.css
body {
  background-color: #E8E9EB;
  --body-bg: #94d1ed;
  --inverted-btn-text-color: #e0cdcd;
  align-items: center;
  display: flex;
  flex-direction: column; 
  justify-content: center;
  text-align: center;
  margin: 0px;
  border-radius: 8px;
}
body.flag {
  background-image: url("../assets/images/flagss.png");
  background-repeat: no-repeat;
  background-size: cover;
}
h1 {
  background: #dcd9d5b1;
  color: #141313;
  font-size: 18px;
  border-radius: 2px;
}
h2 {
  font-family: "Unbounded", sans-serif;
  font-optical-sizing:auto;
  font-weight: 400;
  font-style: normal;
  font-size: 28px;
  color: rgb(24, 25, 25);
}
h3 {
  font-size: 18px;
  color: rgb(39, 34, 36);
  display: flex;
  justify-content: left;
  align-items: center;
  margin-left: 10px;
  margin-top: 0px;
}
.green {
  background-color: rgb(15, 149, 15);
}
.red {
  background-color: rgb(236, 23, 23);
}
#reset-button {
  display: flex;
  font-size: 16px;
  align-content:flex-end;
  align-items:flex-end;
  justify-content: flex-end;
  position: relative;
  cursor: pointer;
  background-color: #a8afb4;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: 760px;
}
nav {
  display: flex;
  width: 100%;
  border-radius: none;
  justify-content: center;
  align-items: center;
  background-color: #e4ede2;
  margin-top: 0px;
  border-top:0dvh;
}
#flag-mode{
  margin-left: 680px;
  margin-bottom: 0px;
  margin-top: 10px;
  display: flex;
  justify-content:flex-end;
  background-color: #af3232;
  color: #ede9e7;
}
.flag {
  margin-top: 15px;
  justify-content: center;
  align-items: center;
}
button {
  background-color: rgb(227, 227, 200);
  border: 0px;
  font-size: 18px;
  cursor: pointer;
  border-radius: 8px;
  margin: 10px;
  margin-top: 40px;
  margin-bottom: 20px;
  padding: 8px 10px;
  align-items: center;
  justify-content: center;
}
#track-score {
  display: flex;
  align-items: end;
  justify-content: flex-start;
  flex-flow: row;
  margin-left:10px;
  margin-top: 0px;
  margin-bottom: 60px;
}
.score{
  font-style: italic;
}
.board-container {
  background-color: #f7fff68d;
  margin-top: 10px;
  width: 860px;
  height: 685px;
  border-radius: 5px;
}

